# RUST

./: .gitignore  Cargo.toml
rustr_app/: .gitignore  Cargo.toml
rustr_app/src/: lib.rs  main.rs
rustr_app/tests/: cli.rs
todo-cli/src/: main.rs
