[package]
name = "rustr_app"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A minimal Rust CLI app"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# add test-only dependencies here if needed
